package entities;

public class Purchase extends Transaction {
    public Purchase(int transactionID, int cashierID) {
        super(transactionID, "purchase", cashierID);
    }
    public int getTransactionID() {
        return super.getTransactionID();
    }
    public void setTransactionID(int transactionID) {
        super.setTransactionID(transactionID);
    }
    public int getCashierID() {
        return super.getCashierID();
    }
    public void setCashierID(int cashierID) {
        super.setCashierID(cashierID);
    }

    /// ////////////////////////////////////////
    /// ////////////////////////////////////////
    /// ////////////////////////////////////////

    @Override
    public void process() {
        //implement
    }


}
