package entities;

public class UserList {
}
